Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63401

Mac: qtbase 5.6 fails to build with newest xcode

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 5.6
    • QPA
    • None
    • MacOS Sierra
    • macOS
    • 0707260a4f8e64dfadf1df5f935e74cabb7c7d27

    Description

      After recently upgrading to Xcode 9.0/Build 9A235, straight qtbase building fails with

      qcocoahelpers.mm:552:39: error: use of undeclared identifier 'InvalidContext'
      require_action(inContext != NULL, InvalidContext, err = paramErr);
      ^
      qcocoahelpers.mm:553:38: error: use of undeclared identifier 'InvalidBounds'
      require_action(inBounds != NULL, InvalidBounds, err = paramErr);
      ^
      qcocoahelpers.mm:554:37: error: use of undeclared identifier 'InvalidImage'
      require_action(inImage != NULL, InvalidImage, err = paramErr);
      ^
      3 errors generated.
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jakepetroules Jake Petroules (DO NOT ASSIGN ISSUES)
              vgt Eirik Aavitsland
              Votes:
              5 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes